
5.2a4 -> 5.2b1:
    - rse: RPM_CHECK_LIB: support --with-<name>=system to enable a library but control detection via flags only
    - rse: let Lua's lregex_lposix to build against PCRE POSIX out of the box
    - jbj: inject $1/$2 into embedded tcl/perl/python/ruby interpreter contexts.
    - jbj: perl: add use RPM; so that perl bindings are available.

5.2a3 -> 5.2a4:
    - rse: fix building without BZip2
    - rse: fix release tarball rolling after recent addition of local copies of XZ, PCRE and Syck
    - rse: forward port all build infrastructure fixes from RPM 5.1
    - rse: eliminate compile-time warnings introduced with recent embedded language support
    - afb: rename --with-ruby to --with-rubyembed, to match Perl/Python.
    - jbj: perl: attach stdout to macro expansion buffer with IO::String.
    - rse: use new POPT 1.15 from devtool environment
    - jbj: tcl: attach rpmtclIO to macro expansion buffer with Tcl_StackChannel.
    - jbj: ruby: attach $stdout to macro expansion buffer using StringIO.
    - jbj: python: attach sys.stdout to macro expansion buffer using cStringIO.
    - jbj: tpython: permit interactive shells.
    - jbj: fix: permit rpmiobSlurp() to be used on stdin.
    - jbj: lua: revert -E /path/to/file.lua wrapping.
    - jbj: popt: remove retrofits for popt < 1.14. use popt internal if needed.
    - jbj: ruby: wire-up %post -p <ruby>. arg1/arg2, persistent interp, todo++.
    - jbj: ruby: wire-up %{ruby:...}. the string result is bogus, todo++.
    - jbj: ruby: add --with-ruby for embedding ruby.
    - jbj: yarn: convert rpmluav to usage mutex with refcounts
    - jbj: yarn: convert rpmlua to usage mutex with refcounts
    - jbj: python: wire-up %post -p <python>. arg1/arg2, persistent interp, todo++.
    - jbj: python: wire-up %{python:...}. the string result is bogus, todo++.
    - jbj: python: add --with-pythonembed for embedding python.
    - jbj: perl: wire-up %post -p <perl>. arg1/arg2, persistent interp, todo++.