@@ -1446,7 +1446,7 @@ static struct rpmlibProvides_s rpmlibProvides[] = {
     { "rpmlib(CompressedFileNames)",	"3.0.4-1",
 	(RPMSENSE_RPMLIB|RPMSENSE_EQUAL),
     N_("file name(s) stored as (dirName,baseName,dirIndex) tuple, not as path.")},
-#if defined(HAVE_BZLIB_H)
+#if defined(WITH_BZIP2)
     { "rpmlib(PayloadIsBzip2)",		"3.0.5-1",
 	(RPMSENSE_RPMLIB|RPMSENSE_EQUAL),
     N_("package payload can be compressed using bzip2.") },
