@@ -439,7 +439,7 @@ struct poptOption rpmioAllPoptTable[] = {
  { "rpmtcldebug", '\0', POPT_ARG_VAL|POPT_ARGFLAG_DOC_HIDDEN, &_rpmtcl_debug, -1,
 	N_("Debug embedded TCL interpreter"), NULL},
 #endif
-#ifdef HAVE_BZLIB_H
+#ifdef WITH_BZIP2
  { "rpmzqdebug", '\0', POPT_ARG_VAL|POPT_ARGFLAG_DOC_HIDDEN, &_rpmzq_debug, -1,
 	N_("Debug rpmzq Job Queuing"), NULL},
 #endif
